a bit of markdown formatting, JSDoc

--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cinzel:wght@400..900&display=swap" rel="stylesheet">  
-  <link rel="stylesheet" href="root.css">
-  <link rel="stylesheet" href="media-root.css">
+  <link rel="stylesheet" href="styles/root.css">
+  <link rel="stylesheet" href="styles/media-root.css">
   <link rel="stylesheet" href="styles/boot-screen.css">
   <link rel="stylesheet" href="styles/markdown.css">
-
-
   <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
 </head>
 <body>
   <main id="root"></main>
-  <!-- <script src="script.js"></script> -->
-  <script type="module" src="scripts/utils.js"></script>
   <script type="module" src="script.js"></script>
 </body>
 </html>
