--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="styles/boot-screen.css">
   <link rel="stylesheet" href="styles/markdown.css">
   <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
   <main id="root"></main>
