--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="styles/media-root.css">
   <link rel="stylesheet" href="styles/boot-screen.css">
   <link rel="stylesheet" href="styles/markdown.css">
-  <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
